@@ -1,6 +1,7 @@
 1.02.03
 Added smoothing for spline traversal (to smooth out jerkiness e.g. at bottom of parabola)
-Added code so the skater can fall off of spline when his velocity dotted with the unit normal of the segment is positive. 
+Added code so the skater can fall off of spline when his velocity dotted with the unit normal of the segment is positive.
+Found an instance of unconserved energy and remedied it.
 
 1.02.02 (10-11-2006)
 Bugfix: When he's stationary and the track is moved he doesn't fall.
